@@ -437,6 +437,7 @@ Developers:
         Toplevel Makefile refactoring.
         Ignored files generated by cmake.
         Added GLFW include path for Fedora.
+        Linux javascript bindings support.
 
     elmiro
         Correction of passed buffer size to readlink and verification of result return by readlink.
