@@ -38,6 +38,7 @@ option(USE_CHIPMUNK "Use chipmunk for physics library" ON)
 option(USE_BOX2D "Use box2d for physics library" OFF)
 option(DEBUG_MODE "Debug or release?" ON)
 option(BUILD_LIBS_LUA "Build lua libraries" OFF)
+option(BUILD_LIBS_JS "Build javascript libraries" OFF)
 option(BUILD_GUI "Build GUI library" ON)
 option(BUILD_NETWORK "Build network library" ON)
 option(BUILD_STORAGE "Build storage library" ON)
@@ -47,6 +48,7 @@ option(BUILD_EDITOR_COCOSTUDIO "Build editor support for cocostudio" ON)
 option(BUILD_EDITOR_COCOSBUILDER "Build editor support for cocosbuilder" ON)
 
 option(BUILD_TestCpp "Only build TestCpp sample" ON)
+option(BUILD_TestJs "Only build TestJavascript sample" OFF)
 option(BUILD_TestLua "Only build TestLua sample" OFF)
 
 else()#temp
@@ -55,6 +57,7 @@ option(USE_CHIPMUNK "Use chipmunk for physics library" ON)
 option(USE_BOX2D "Use box2d for physics library" OFF)
 option(DEBUG_MODE "Debug or release?" ON)
 option(BUILD_LIBS_LUA "Build lua libraries" ON)
+option(BUILD_LIBS_JS "Build javascript libraries" ON)
 option(BUILD_GUI "Build GUI library" ON)
 option(BUILD_NETWORK "Build network library" ON)
 option(BUILD_STORAGE "Build storage library" ON)
@@ -64,6 +67,7 @@ option(BUILD_EDITOR_COCOSTUDIO "Build editor support for cocostudio" ON)
 option(BUILD_EDITOR_COCOSBUILDER "Build editor support for cocosbuilder" ON)
 
 option(BUILD_TestCpp "Only build TestCpp sample" ON)
+option(BUILD_TestJs "Only build TestJavascript sample" ON)
 option(BUILD_TestLua "Only build TestLua sample" ON)
 
 endif()#temp
@@ -279,8 +283,8 @@ if(BUILD_EDITOR_COCOSTUDIO)
 add_subdirectory(cocos/editor-support/cocostudio)
 endif(BUILD_EDITOR_COCOSTUDIO)
 
-if(BUILD_LIBS_LUA)
 ## Scripting
+if(BUILD_LIBS_LUA)
 # lua
 add_subdirectory(external/lua/lua)
 
@@ -288,14 +292,23 @@ add_subdirectory(external/lua/lua)
 add_subdirectory(external/lua/tolua)
 
 # luabinding
-add_subdirectory(cocos/scripting)
+add_subdirectory(cocos/scripting/lua)
 endif(BUILD_LIBS_LUA)
+
+if(BUILD_LIBS_JS)
+# jsbinding
+add_subdirectory(cocos/scripting/javascript)
+endif(BUILD_LIBS_JS)
 
 # build tests 
 
 if(BUILD_TestCpp)
 add_subdirectory(tests/test-cpp)
 endif(BUILD_TestCpp)
+
+if(BUILD_TestJs)
+add_subdirectory(tests/test-javascript)
+endif(BUILD_TestJs)
 
 if(BUILD_TestLua)
 add_subdirectory(tests/test-lua)
